gcc/testsuite/rust/rustc/ui/rfcs/rfc-1937-termination-trait/issue-103052-2_dg.rs
mod child {
    trait Main {
        fn main() -> impl std::process::Termination;
    }

    struct Something;

    impl Main for () {
        fn main() -> Something {
// { dg-error ".E0277." "" { target *-*-* } .-1 }
            Something
        }
    }
}

fn main() {}

